master: agregado de codigo e imagenes

--- a/PaginaConCSS/index.html
+++ b/PaginaConCSS/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         <!-- Barra de menu-->
-        <nav> 
+        <nav class="navBar"> 
                 <a href="https://www.lacapital.com.ar/secciones/ultimo-momento.html"> Ultimas noticias </a>
                 <a href="https://www.lacapital.com.ar/secciones/laciudad.html"> Ciudad </a>
                 <a href="https://www.lacapital.com.ar/secciones/ovacion.html"> Ovacion </a> 
